css 2nd fix to wrap full page images in divs to get figcaptions displaying correctly

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -51,8 +51,4 @@ figcaption p + p{
 		flex-direction: column;
 		max-height: 100vh;
 	}
-
-	.full-page img{
-		height: 100%;
-	}
 }
